# Checksum-calculator

./: Cargo.toml  README.md
src/: compare_checksums.rs  genreate_checksums.rs  main.rs
