[package]
name = "checksum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9"
ring = "0.17"
clap = { version = "*", features = ["derive"] }
data-encoding = "2.5"
indicatif = "0.17"
colored = "2.1"
