[package]
name = "checksum"
version = "0.1.0"
edition = "2021"


[dependencies]
rayon = "1.9"
ring = "0.17"
clap = { version = "*", features = ["derive"] }
data-encoding = "2.5"
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2.1"
crossterm = "0.27"
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3
strip = true
